--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/service_load_balancing
-	previous = 
-	base = be995d3
+	previous = be995d3
+	base = 45679d9
 	trim = 
 	trimbase = 
