--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/service_load_balancing
-	previous = 
-	base = 26f3cd4
+	previous = 26f3cd4
+	base = 4ac0d36
 	trim = 
 	trimbase = 
