--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/service_load_balancing
-	previous = 
-	base = c0b4eda
+	previous = c0b4eda
+	base = 357f718
 	trim = 
 	trimbase = 
