--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/service_load_balancing
-	previous = 
-	base = f12179e
+	previous = f12179e
+	base = 64706ba
 	trim = 
 	trimbase = 
