--- a/tracks.yaml
+++ b/tracks.yaml
@@ -24,7 +24,8 @@ tracks:
     ros_distro: kilted
     vcs_type: git
     vcs_uri: https://github.com/Barry-Xu-2018/ros2_service_load_balancing.git
-    version: :{auto}
+    version: 0.1.1
+    version_saved: :{auto}
   rolling:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
