--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.1": ["Barry Xu", "barry.xu@sony.com"]}
+{"0.1.2": ["Barry Xu", "barry.xu@sony.com"], "0.1.1": ["Barry Xu", "barry.xu@sony.com"]}
