Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.1-2": ["Mon Dec 16 2024", "Barry Xu", "barry.xu@sony.com"], "0.1.1-1": ["Mon Dec 16 2024", "Barry Xu", "barry.xu@sony.com"]}
+{"0.1.2-1": ["Mon May 26 2025", "Barry Xu", "barry.xu@sony.com"], "0.1.1-2": ["Mon Dec 16 2024", "Barry Xu", "barry.xu@sony.com"], "0.1.1-1": ["Mon Dec 16 2024", "Barry Xu", "barry.xu@sony.com"]}
